// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attachments renders attachments 1`] = `
<Screen
  drawUnderNavBar={true}
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "attachments.dismiss-btn",
        "title": "Done",
      },
    ]
  }
  navBarColor="#fff"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Add attachment",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/Add.png",
        },
        "testID": "attachments.add-btn",
      },
    ]
  }
  title="Attachments"
>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 49,
      }
    }
  >
    <Component
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={[Function]}
      data={
        Array [
          Object {
            "data": Object {
              "display_name": "Book Report",
              "filename": "Attachment 1.jpg",
              "id": "1",
              "mime_class": "document",
              "preview_url": "/",
              "size": 488212,
              "thumbnail_url": "http://fillmurray.com/322/200",
              "uri": "file://somewhere/on/disk.jpg",
              "url": "http://canvaslms.com/bookreport",
            },
            "error": null,
            "fileID": "1",
            "progress": Object {
              "loaded": 0,
              "total": 0,
            },
          },
          Object {
            "data": Object {
              "display_name": "Book Report",
              "filename": "Attachment 1.jpg",
              "id": "2",
              "mime_class": "document",
              "preview_url": "/",
              "size": 488212,
              "thumbnail_url": "http://fillmurray.com/322/200",
              "uri": "file://somewhere/on/disk.jpg",
              "url": "http://canvaslms.com/bookreport",
            },
            "error": null,
            "fileID": "2",
            "progress": Object {
              "loaded": 0,
              "total": 0,
            },
          },
        ]
      }
      keyExtractor={[Function]}
      renderItem={[Function]}
      testID="attachments.list.list"
    />
    <AttachmentPicker
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
</Screen>
`;

exports[`Attachments renders empty state 1`] = `
<Screen
  drawUnderNavBar={true}
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "attachments.dismiss-btn",
        "title": "Done",
      },
    ]
  }
  navBarColor="#fff"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Add attachment",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/Add.png",
        },
        "testID": "attachments.add-btn",
      },
    ]
  }
  title="Attachments"
>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 49,
      }
    }
  >
    <Component
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={[Function]}
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      testID="attachments.list.list"
    />
    <AttachmentPicker
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
</Screen>
`;
